3.mpvue实战项目-启动项目

--- a/project.config.json
+++ b/project.config.json
@@ -9,7 +9,7 @@
 	},
 	"miniprogramRoot": "dist/wx/",
 	"compileType": "miniprogram",
-	"appid": "touristappid",
+	"appid": "wx69b17e48d6b0184b",
 	"projectname": "mpvue-app",
 	"condition": {
 		"search": {
