--- a/src/app.json
+++ b/src/app.json
@@ -1,6 +1,7 @@
 {
   "pages": [
-    "pages/index/main"
+    "pages/index/main",
+    "pages/question/main"
   ],
   "window": {
     "backgroundTextStyle": "light",
