14.mpvue-处理查看全部和进入课程

--- a/src/app.json
+++ b/src/app.json
@@ -4,7 +4,8 @@
     "pages/question/main",
     "pages/learn/main",
     "pages/lesson/main",
-    "pages/mine/main"
+    "pages/mine/main",
+    "pages/mylesson/main"
   ],
   "tabBar": {
     "color": "#959394",
