15.mpvue-热门课程功能实现v0.3 webview访问

--- a/src/app.json
+++ b/src/app.json
@@ -5,7 +5,8 @@
     "pages/learn/main",
     "pages/lesson/main",
     "pages/mine/main",
-    "pages/mylesson/main"
+    "pages/mylesson/main",
+    "pages/webview/main"
   ],
   "tabBar": {
     "color": "#959394",
