17.mpvue-展示观看视频的课程目录v0.1 watchLesson页面搭建&接口配置getCatalogue

--- a/src/app.json
+++ b/src/app.json
@@ -6,7 +6,8 @@
     "pages/lesson/main",
     "pages/mine/main",
     "pages/mylesson/main",
-    "pages/webview/main"
+    "pages/webview/main",
+    "pages/watchLesson/main"
   ],
   "tabBar": {
     "color": "#959394",
