24.mpvue-展示菜单信息及关于我们v0.2 关于我们

--- a/src/app.json
+++ b/src/app.json
@@ -7,7 +7,8 @@
     "pages/mine/main",
     "pages/mylesson/main",
     "pages/webview/main",
-    "pages/watchLesson/main"
+    "pages/watchLesson/main",
+    "pages/aboutUs/main"
   ],
   "tabBar": {
     "color": "#959394",
